# SRTSegmentMerger

./: .gitignore  Cargo.toml  FONTS_README.md  README.md
scripts/: download_fonts.sh
src/: audio_player.rs  ffmpeg.rs  main.rs  manual_cut.rs  recognition.rs  srt_merger.rs  whisper.rs
